--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -39,7 +39,8 @@
 				}
 
 				&.activated {
-					box-shadow: inset 0 -3px 0 var(--color-accent-1);
+					box-shadow: inset 0 calc(var(--border-width-lg) * -1) 0
+						var(--color-accent-1);
 				}
 			}
 		}
