refactor: Refactor border style for navigation list items in CSS
In the 'navigation.module.css' file, the border style for list items has been refined. The 'border-inline-end' has been removed from every list item and is now applied only to those that are not the last child in the list. Consequently, the explicit absence of an end border for the last child has also been removed.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -7,16 +7,17 @@
 		block-size: 100%;
 
 		li {
-			border-inline-end: var(--border);
-
 			@container (inline-size < 709px) {
 				flex-grow: 1;
+			}
+
+			&:not(:last-child) {
+				border-inline-end: var(--border);
 			}
 
 			&:last-child {
 				margin-inline-start: auto;
 				border-inline-start: var(--border);
-				border-inline-end: none;
 			}
 
 			a {
