feat: Improve visual design with border-radius additions
Footer, header and navigation components now have border-radius styles, this is implemented for aesthetic purposes to ensure that the outline follows the radius of the UI in the corners when focused.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/footer/footer.module.css
+++ b/src/components/interface/footer/footer.module.css
@@ -45,6 +45,7 @@
 			gap: 7px;
 			padding-inline: 23px;
 			color: var(--color-secondary-1);
+			border-bottom-right-radius: var(--border-radius-md);
 
 			&:is(:focus-visible, :hover) {
 				color: var(--color-secondary-4);
