--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -11,15 +11,6 @@
 				flex-grow: 1;
 			}
 
-			&:not(:last-child) {
-				border-inline-end: var(--border);
-			}
-
-			&:last-child {
-				margin-inline-start: auto;
-				border-inline-start: var(--border);
-			}
-
 			a {
 				--padding-inline: 32px;
 
@@ -42,6 +33,19 @@
 				&.activated {
 					box-shadow: inset 0 calc(var(--border-width-lg) * -1) 0
 						var(--color-accent-1);
+				}
+			}
+
+			&:not(:last-child) {
+				border-inline-end: var(--border);
+			}
+
+			&:last-child {
+				margin-inline-start: auto;
+				border-inline-start: var(--border);
+
+				a {
+					border-top-right-radius: var(--border-radius-md);
 				}
 			}
 		}
