--- a/src/global.css
+++ b/src/global.css
@@ -59,7 +59,7 @@
 }
 
 * {
-	:is(&:focus, &:focus-visible) {
+	:is(&:focus-visible) {
 		outline: var(--border-width-lg) solid var(--color-accent-4);
 		outline-offset: calc(var(--border-width-lg) * -1);
 	}
