refactor: Extract sidebar into separate component in 'about-me' route
A 'Sidebar' component has been created, enhancing code organization for the 'about-me' route. This move will not only improve maintainability but will also promote reusability and simplify future testing. A note has been added to parts of the code earmarked for deletion after migration is finalized.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -37,6 +37,7 @@
 			}
 		}
 
+		/* TODO: For migration. Remove later. */
 		.sidebar {
 			inline-size: calc(100% - var(--inline-size-activitybar));
 
