feat: Add Activitybar component and related styles
A new component, 'Activitybar', along with its CSS module 'activitybar.module.css' have been added to the 'about-me' routes. The Activitybar component maps over given list of activities and displays a navigable list. The related index files have been also been updated with placeholder comments for future removal.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/index.module.css
+++ b/src/routes/about-me/index.module.css
@@ -10,6 +10,7 @@
 		inline-size: var(--inline-size-aside);
 		border-inline-end: var(--border);
 
+		/* TODO: For migration. Remove later. */
 		.activitybar {
 			flex-basis: var(--inline-size-activitybar);
 			flex-shrink: 0;
