refactor: Update CSS relationship selector
The relationship selector in both sidebar.module.css and index.module.css has been adjusted. The change primarily involves replacing explicit child tag selectors with the ampersand (&) to signify the current parent selector. This results in better CSS maintainability and readability.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/index.module.css
+++ b/src/routes/index.module.css
@@ -95,7 +95,7 @@
 				font-size: var(--font-size-label);
 				text-indent: -1em;
 
-				+ p {
+				+ & {
 					margin-block-start: 10px;
 				}
 			}
