feat: Update sidebar UI and styles
Made changes to the sidebar component and its corresponding styles in the about-me route. Added visual hierarchy by introducing "directories" and "files" classes within the sidebar. Additionally, included the MarkdownIcon in the sidebar UI and improved the visibility of the active button or link.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/components/sidebar.module.css
+++ b/src/routes/about-me/components/sidebar.module.css
@@ -1,32 +1,53 @@
 .sidebar {
 	inline-size: calc(100% - var(--inline-size-activitybar));
 
+	:where(a, button, span) {
+		--padding-inline: 6px;
+
+		display: flex;
+		gap: 8px;
+		inline-size: 100%;
+		margin-inline: calc(var(--padding-inline) * -1);
+	}
+
+	:where(a, button) {
+		border-radius: var(--border-radius-sm);
+
+		&:not(.activated),
+		&:not(:is(:focus-visible, :hover)) {
+			color: var(--color-secondary-1);
+		}
+
+		&.activated,
+		&:is(:focus-visible, :hover) {
+			color: var(--color-secondary-4);
+		}
+
+		&:not([disabled]):is(:focus-visible, :hover) {
+			background-color: var(--color-primary-1);
+		}
+	}
+
 	ul {
 		li {
-			color: var(--color-secondary-1);
-
-			+ & {
+			+ &,
+			ul {
 				margin-block-start: 4px;
 			}
 
-			a,
-			button {
-				--padding-inline: 6px;
-
-				display: flex;
-				gap: 8px;
-				inline-size: 100%;
-				padding-inline: var(--padding-inline);
-				margin-inline: calc(var(--padding-inline) * -1);
-				border-radius: var(--border-radius-sm);
-
-				&.activated,
-				&:is(:focus-visible, :hover) {
-					color: var(--color-secondary-4);
+			ul {
+				li {
+					a,
+					button,
+					span {
+						padding-inline-start: calc(var(--padding-inline) + 24px);
+					}
 				}
+			}
 
-				&:not([disabled]):is(:focus-visible, :hover) {
-					background-color: var(--color-primary-1);
+			&:not(& ul li) {
+				> :is(a, button, span) {
+					padding-inline: var(--padding-inline);
 				}
 			}
 		}
