refactor: Refactor CSS selectors in sidebar.module.css
The CSS selectors have been simplified for better readability and maintainability. The `a`, `button`, and `span` elements, in addition to some state-specific styles (`activated`, `focus-visible`, `hover`), have been consolidated using the `:is()` pseudo-class function.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/components/sidebar.module.css
+++ b/src/routes/about-me/components/sidebar.module.css
@@ -11,13 +11,11 @@
 		margin-inline: calc(var(--padding-inline) * -1);
 		border-radius: var(--border-radius-sm);
 
-		&:not(.activated),
-		&:not(:is(:focus-visible, :hover)) {
+		&:not(:is(.activated, :focus-visible, :hover)) {
 			color: var(--color-secondary-1);
 		}
 
-		&.activated,
-		&:is(:focus-visible, :hover) {
+		&:is(.activated, :focus-visible, :hover) {
 			color: var(--color-secondary-4);
 		}
 
@@ -35,9 +33,7 @@
 
 			ul {
 				li {
-					a,
-					button,
-					span {
+					:is(a, button, span) {
 						padding-inline-start: calc(
 							var(--padding-inline) + var(--gap) + var(--size-icon-sm)
 						);
