refactor: Update sidebar CSS for better code reusability
The changes introduced here refactor the sidebar.module.css file to make it more reusable and maintainable. Specifically, we replaced the hardcoded 'margin-block-start' value with a CSS variable.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/components/sidebar.module.css
+++ b/src/routes/about-me/components/sidebar.module.css
@@ -26,9 +26,10 @@
 
 	ul {
 		li {
-			+ &,
-			ul {
-				margin-block-start: 4px;
+			--margin-block-start: 4px;
+
+			+ & {
+				margin-block-start: var(--margin-block-start);
 			}
 
 			> :is(a, button, span) {
@@ -36,6 +37,8 @@
 			}
 
 			ul {
+				margin-block-start: var(--margin-block-start);
+
 				li {
 					:is(a, button, span) {
 						padding-inline-start: calc(
