refactor: Add formatter settings to prettier.config.js and apply to codebase.
Added new settings to the prettier.config.js file. Specifically, this update set the "printWidth" property to 160, adjusted the formatting spec, and applied it to the codebase.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/components/sidebar.module.css
+++ b/src/routes/about-me/components/sidebar.module.css
@@ -41,9 +41,7 @@
 
 				li {
 					:is(a, button, span) {
-						padding-inline-start: calc(
-							var(--padding-inline) + var(--gap) + var(--size-icon-sm)
-						);
+						padding-inline-start: calc(var(--padding-inline) + var(--gap) + var(--size-icon-sm));
 					}
 				}
 			}
