--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -31,8 +31,7 @@
 				}
 
 				&.activated {
-					box-shadow: inset 0 calc(var(--border-width-lg) * -1) 0
-						var(--color-accent-1);
+					box-shadow: inset 0 calc(var(--border-width-lg) * -1) 0 var(--color-accent-1);
 				}
 			}
 
