--- a/src/global.css
+++ b/src/global.css
@@ -2,18 +2,10 @@
 	--size-icon-sm: 16px;
 	--size-icon-md: 20px;
 	--size-icon-lg: 24px;
-	--block-size-main: calc(
-		100svh -
-			(
-				var(--padding-outside) * 2 + var(--block-size-header) +
-					var(--block-size-footer)
-			)
-	);
+	--block-size-main: calc(100svh - (var(--padding-outside) * 2 + var(--block-size-header) + var(--block-size-footer)));
 	--padding-outside: 20px;
-	--font-family-default: monospace, "Helvetica Neue", arial,
-		"Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
-	--font-family-primary: "Fira Code Retina", "Fira Code", "Fira Code Medium",
-		"Fira Code Regular", "Fira Code Light";
+	--font-family-default: monospace, "Helvetica Neue", arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
+	--font-family-primary: "Fira Code Retina", "Fira Code", "Fira Code Medium", "Fira Code Regular", "Fira Code Light";
 	--font-size-headline: 62px;
 	--font-size-subheadline: 32px;
 	--font-size-body: 18px;
