refactor: Refactor CSS selectors with :is() pseudo-class
Change CSS selectors within footer.module.css, activitybar.module.css, and navigation.module.css files. Instead of using comma-separated classes and pseudo-classes, the new efficient :is() pseudo-class is utilized to group similar styles together.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/components/activitybar.module.css
+++ b/src/routes/about-me/components/activitybar.module.css
@@ -12,8 +12,7 @@
 				line-height: 1;
 				color: var(--color-secondary-1-lighter);
 
-				&.activated,
-				&:is(:focus-visible, :hover) {
+				&:is(.activated, :focus-visible, :hover) {
 					color: var(--color-secondary-1);
 				}
 			}
