--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -25,8 +25,7 @@
 					--padding-inline: 0;
 				}
 
-				&:is(:focus-visible, :hover),
-				&.activated {
+				&:is(.activated, :focus-visible, :hover) {
 					color: var(--color-secondary-4);
 				}
 
