refactor: Update CSS rule for sidebar module
The CSS rule formatting for list items in the sidebar module has been modified - the :is pseudo-class has been removed, and specific styles for anchor tags, buttons, and spans have been individually declared.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/components/sidebar.module.css
+++ b/src/routes/about-me/components/sidebar.module.css
@@ -40,7 +40,9 @@
 				margin-block-start: var(--margin-block-start);
 
 				li {
-					:is(a, button, span) {
+					a,
+					button,
+					span {
 						padding-inline-start: calc(var(--padding-inline) + var(--gap) + var(--size-icon-sm));
 					}
 				}
