feat: Update tabs module CSS properties
Improved the design of the tabs component by using flex layout. Additional CSS properties were introduced to the tabs module, including padding and font size for buttons, and border size for li items and the entire tabs module.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/tabs.module.css
+++ b/src/components/interface/tabs.module.css
@@ -1,6 +1,15 @@
 .tabs {
+	display: flex;
+	block-size: 40px;
+	border-block-end: var(--border);
+
 	li {
+		border-inline-end: var(--border);
+
 		button {
+			block-size: 100%;
+			padding-inline: 14px;
+			font-size: var(--font-size-label);
 			color: var(--color-secondary-1);
 		}
 	}
