--- a/src/components/interface/accordion.module.css
+++ b/src/components/interface/accordion.module.css
@@ -8,7 +8,7 @@
 		gap: 11px;
 		align-items: center;
 		inline-size: 100%;
-		block-size: 40px;
+		block-size: var(--block-size-tab);
 		padding-inline: var(--padding);
 		border-block-end: var(--border);
 	}
