feat: Update Tab component UI and functionality
Style changes have been made in the tab.module.css file to improve user interface of the Tab component. The CloseIcon component has also been introduced to each button within the Tab component. This allows for better button interaction and enhances the user experience.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/tab.module.css
+++ b/src/components/interface/tab.module.css
@@ -7,10 +7,18 @@
 		border-inline-end: var(--border);
 
 		button {
+			display: flex;
+			gap: 49px;
+			align-items: center;
 			block-size: 100%;
 			padding-inline: 14px;
 			font-size: var(--font-size-label);
 			color: var(--color-secondary-1);
+
+			.icon {
+				margin-inline-end: -2px;
+				font-size: var(--font-size-body);
+			}
 		}
 	}
 }
