feat: Remove temporary background colors in editor.module.css
This commit removes the temporary background colors that were previously used for testing purposes in editor.module.css. It also adjusts the style rule to add a border to all but the last child element, improving visual layout and clarity.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/editor.module.css
+++ b/src/routes/about-me/editor.module.css
@@ -5,17 +5,15 @@
 	gap: 1px;
 	block-size: var(--block-size-main); /* TEMP: */
 	overflow: scroll;
-	background-color: purple; /* TEMP: */
 
 	.pane {
 		container-type: inline-size;
 		flex-basis: 400px;
 		flex-grow: 1;
 		block-size: var(--block-size-main); /* TEMP: */
-		background-color: yellow; /* TEMP: */
 
-		&:last-child {
-			background-color: green; /* TEMP: */
+		&:not(:last-child) {
+			border-inline-end: var(--border);
 		}
 	}
 }
