refactor: Refactor CSS selectors from 'a' to '.link'
This commit changes the CSS selectors from 'a' to '.link' in multiple files, aiming for more specificity and avoiding global styling that may cause styles to bleed into other elements unintentionally. This change makes the styling more predictable and easier to debug in the future.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/header.module.css
+++ b/src/components/interface/header.module.css
@@ -12,7 +12,7 @@
 		color: var(--color-secondary-1);
 		border-inline-end: var(--border);
 
-		a {
+		.link {
 			display: flex;
 			align-items: center;
 			inline-size: 100%;
