refactor: Rename small icon size variable
The variable representing small icon size in global CSS has been renamed from --size-icon-sm to --size-icon-xs. Consequently, the variable used in calculating padding-inline-start in sidebar.module.css has been updated to reflect this change.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,5 @@
 :root {
-	--size-icon-sm: 16px;
+	--size-icon-xs: 16px;
 	--size-icon-md: 20px;
 	--size-icon-lg: 24px;
 	--inline-size-sitetitle: 310px;
