feat: Add small size icon variable to global.css
A new variable (--size-icon-sm: 18px;) has been introduced to the root of the CSS file to specify the dimensions for small sized icons. This helps in maintaining consistency in icon sizes across the application.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,6 @@
 :root {
 	--size-icon-xs: 16px;
+	--size-icon-sm: 18px;
 	--size-icon-md: 20px;
 	--size-icon-lg: 24px;
 	--inline-size-sitetitle: 310px;
