refactor: Refactor icon size variable names and remove unused
Variable names for icon sizes have been refactored for consistency and readability. The names now start with "--icon-size" followed by the pre-existing size distinction (sm, md, lg, etc.). Additionally, unused variable definitions for icon sizes in the global CSS file have been removed.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/about-me/sidebar.module.css
+++ b/src/routes/about-me/sidebar.module.css
@@ -43,7 +43,7 @@
 					a,
 					button,
 					span {
-						padding-inline-start: calc(var(--padding-inline) + var(--gap) + var(--size-icon-xs));
+						padding-inline-start: calc(var(--padding-inline) + var(--gap) + var(--icon-size-xs));
 					}
 				}
 			}
