--- a/src/components/interface/tab.module.css
+++ b/src/components/interface/tab.module.css
@@ -17,7 +17,7 @@
 
 			.icon {
 				margin-inline-end: -2px;
-				font-size: var(--size-icon-sm);
+				font-size: var(--icon-size-sm);
 			}
 		}
 	}
