--- a/src/components/interface/tab.module.css
+++ b/src/components/interface/tab.module.css
@@ -4,49 +4,25 @@
 	border-block-end: var(--border);
 
 	li {
-		position: relative;
+		display: flex;
+		gap: 49px;
+		align-items: center;
+		padding-inline: 14px;
+		font-size: var(--font-size-label);
+		color: var(--color-secondary-1);
 		border-inline-end: var(--border);
 
 		button {
-			--icon-size: var(--icon-size-sm);
+			padding: 2px;
+			line-height: 1;
+			border-radius: var(--border-radius-round);
 
-			color: var(--color-secondary-1);
-
-			&.base {
-				--gap: 49px;
-				--padding-inline: 14px;
-
-				block-size: 100%;
-				padding-inline: var(--padding-inline) calc(var(--gap) + var(--padding-inline) + var(--icon-size));
-				font-size: var(--font-size-label);
-
-				&:is([disabled], :focus-visible, :hover) {
-					color: var(--color-secondary-4);
-				}
-
-				&[disabled] {
-					box-shadow: inset 0 calc(var(--border-width-lg) * -1) 0 var(--color-accent-1);
-				}
+			&:hover {
+				background-color: var(--color-secondary-1-lighter);
 			}
 
-			&.close {
-				--size: 20px;
-
-				position: absolute;
-				inset-block: 0;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				inline-size: var(--size);
-				block-size: var(--size);
-				margin-block: auto;
-				font-size: var(--icon-size);
-				border-radius: var(--border-radius-round);
-				inset-inline-end: 12px;
-
-				&:hover {
-					background-color: var(--color-secondary-1-lighter);
-				}
+			.icon {
+				font-size: var(--icon-size-sm);
 			}
 		}
 	}
