refactor: Refactor Tab component and related CSS
Revised the implementation of the Tab component, where the "ul" and "li" elements were replaced with "div" elements for offering better styling control. The corresponding CSS for this component has also been updated to match the new structure in the HTML structure.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/tab.module.css
+++ b/src/components/interface/tab.module.css
@@ -1,9 +1,9 @@
-.tab {
+.container {
 	display: flex;
 	block-size: var(--block-size-tab);
 	border-block-end: var(--border);
 
-	li {
+	.tab {
 		display: flex;
 		gap: 49px;
 		align-items: center;
