refactor: Remove Triangle component and replace with TriangleIcon
The Triangle component and associated CSS were deleted and replaced throughout the project with the TriangleIcon component. The necessary changes were also applied to the relevant CSS files and components to ensure the continued correct display and functionality.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/accordion.module.css
+++ b/src/components/interface/accordion.module.css
@@ -11,6 +11,11 @@
 		block-size: var(--block-size-tab);
 		padding-inline: var(--padding);
 		border-block-end: var(--border);
+
+		.icon {
+			font-size: 9px;
+			transition: var(--transition);
+		}
 	}
 
 	.body {
