--- a/src/routes/about-me/editor/pane.module.css
+++ b/src/routes/about-me/editor/pane.module.css
@@ -1,3 +1,9 @@
-/* stylelint-disable-next-line block-no-empty */
 .pane {
+	flex-basis: 400px;
+	flex-grow: 1;
+	block-size: var(--block-size-main); /* TEMP: */
+
+	&:not(:last-child) {
+		border-inline-end: var(--border);
+	}
 }
