--- a/src/routes/hello/game.module.css
+++ b/src/routes/hello/game.module.css
@@ -38,6 +38,7 @@
 		}
 
 		.help {
+			color: var(--color-secondary-4);
 			background: rgb(var(--color-base-2-rgb) / 19%);
 			border-radius: var(--border-radius-md);
 
