refactor: Update global CSS variables
This commit moves the `--block-size-footer` variable from the footer.module.css to the global.css file. Now, the footer size is defined within the global scope, enabling a more consistent design across the entire application. This should also help reduce redundancy and complexity in the CSS files.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@
 	--inline-size-sitetitle: 310px;
 	--block-size-main: calc(100svh - (var(--padding-outside) * 2 + var(--block-size-header) + var(--block-size-footer)));
 	--block-size-header: 56px;
+	--block-size-footer: 56px;
 	--block-size-tab: 40px;
 	--padding-outside: 20px;
 	--font-family-default: monospace, "Helvetica Neue", arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
