refactor: Refactor CSS to calculate body and main block sizes
Updated the CSS code to use a variable, `--block-size-body`, to represent the total block size of the body element. Also, refactored the `--block-size-main` calculation to use `--block-size-body` for better readability and maintainability.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,7 @@
 :root {
 	--inline-size-sitetitle: 310px;
-	--block-size-main: calc(100svh - (var(--padding-outside) * 2 + var(--block-size-header) + var(--block-size-footer)));
+	--block-size-body: calc(100svh - var(--padding-outside) * 2);
+	--block-size-main: calc(var(--block-size-body) - var(--block-size-header) - var(--block-size-footer));
 	--block-size-header: 56px;
 	--block-size-footer: 56px;
 	--block-size-tab: 40px;
@@ -72,7 +73,7 @@ html {
 	background-color: var(--color-base-1);
 
 	body {
-		block-size: calc(100svh - var(--padding-outside) * 2);
+		block-size: var(--block-size-body);
 		overflow: hidden;
 		font-family: var(--font-family-primary), var(--font-family-default);
 		background-color: var(--color-base-2);
