refactor: Update color definitions and blending techniques
This commit updates the color definitions from RGB to CSS color-mix in the application's CSS files. Removed RGB color variables in the global.css file and updated other component CSS files to use the color-mix for color blending. This approach simplifies the management of colors and is more compatible with different color spaces.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/button.module.css
+++ b/src/components/interface/button.module.css
@@ -26,7 +26,7 @@
 		border-radius: var(--border-radius-md);
 
 		&:hover {
-			border-color: rgb(var(--color-secondary-4-rgb) / 50%);
+			border-color: color-mix(in srgb, var(--color-secondary-4), transparent 50%);
 		}
 	}
 }
