refactor: Update CSS color variables and references
The commit modifies several CSS color variables for standardization across multiple CSS files. The changes include renaming color-based variables to descriptive names such as 'color-base-1' replaced with 'color-background-secondary'. The named variables have been updated in all the instances they were referenced in the code.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/routes/hello/game/key.module.css
+++ b/src/routes/hello/game/key.module.css
@@ -5,7 +5,7 @@
 	justify-content: center;
 	inline-size: 49px;
 	block-size: 28px;
-	background-color: var(--color-base-1);
+	background-color: var(--color-background-secondary);
 	border: var(--border);
 	border-radius: var(--border-radius-md);
 
