--- a/src/global.css
+++ b/src/global.css
@@ -18,9 +18,9 @@
 	--icon-size-sm: 18px;
 	--icon-size-md: 20px;
 	--icon-size-lg: 24px;
-	--color-base-1: #01080e;
-	--color-base-2: #011627;
-	--color-base-3: #011221;
+	--color-background: #011627;
+	--color-background-primary: #011221;
+	--color-background-secondary: #01080e;
 	--color-primary-1: #1e2d3d;
 	--color-primary-2: #1c2b3a;
 	--color-primary-2-lighter: #263b50;
@@ -54,14 +54,14 @@ html {
 	padding: var(--padding-outside);
 	font-size: var(--font-size-body);
 	color: var(--color-secondary-1);
-	background-color: var(--color-base-1);
+	background-color: var(--color-background-secondary);
 
 	body {
 		box-sizing: content-box;
 		block-size: var(--block-size-body);
 		overflow: hidden;
 		font-family: var(--font-family-primary), var(--font-family-default);
-		background-color: var(--color-base-2);
+		background-color: var(--color-background);
 		border: var(--border);
 		border-radius: var(--border-radius-md);
 
