--- a/src/routes/hello/game.module.css
+++ b/src/routes/hello/game.module.css
@@ -6,16 +6,16 @@
 	padding-block: 35px;
 	padding-inline: 30px;
 	background-color: color-mix(in srgb, #fff 7.5%, transparent);
-	border: 1px solid var(--color-base-1);
+	border: 1px solid var(--color-background-secondary);
 	border-radius: var(--border-radius-md);
 	box-shadow: inset 0 1px 0 color-mix(in srgb, #fff 30%, transparent);
 
 	.main {
 		position: relative;
 		inline-size: 238px;
-		background-color: color-mix(in srgb, var(--color-base-2) 84%, transparent);
+		background-color: color-mix(in srgb, var(--color-background) 84%, transparent);
 		border-radius: var(--border-radius-md);
-		box-shadow: inset 1px 5px 11px color(in srgb, var(--color-base-1) 71%, transparent);
+		box-shadow: inset 1px 5px 11px color(in srgb, var(--color-background-secondary) 71%, transparent);
 
 		button {
 			position: absolute;
@@ -39,7 +39,7 @@
 
 		.help {
 			color: var(--color-secondary-4);
-			background-color: color-mix(in srgb, var(--color-base-2) 19%, transparent);
+			background-color: color-mix(in srgb, var(--color-background) 19%, transparent);
 			border-radius: var(--border-radius-md);
 
 			ul {
