feat: Update color variables throughout CSS files
Changes were made to the color variables used in the CSS to reflect a new color scheme. This includes updates to the 'color-secondary' variables in several module CSS files, replacement of these variables with the new 'color-foreground' variables and updates in the global.css file to reflect this change.

Signed-off-by: taichi221228 <taichi221228@icloud.com>

--- a/src/components/interface/button.module.css
+++ b/src/components/interface/button.module.css
@@ -22,11 +22,11 @@
 	}
 
 	&.ghost {
-		border: 1px solid var(--color-secondary-4);
+		border: 1px solid var(--color-foreground-primary);
 		border-radius: var(--border-radius-md);
 
 		&:hover {
-			border-color: color-mix(in srgb, var(--color-secondary-4), transparent 50%);
+			border-color: color-mix(in srgb, var(--color-foreground-primary), transparent 50%);
 		}
 	}
 }
