--- a/src/components/interface/header/navigation.module.css
+++ b/src/components/interface/header/navigation.module.css
@@ -25,7 +25,7 @@
 				}
 
 				&:is(.activated, :focus-visible, :hover) {
-					color: var(--color-secondary-4);
+					color: var(--color-foreground-primary);
 				}
 
 				&.activated {
