--- a/src/global.css
+++ b/src/global.css
@@ -21,14 +21,14 @@
 	--color-background: #011627;
 	--color-background-primary: #011221;
 	--color-background-secondary: #01080e;
+	--color-foreground: #607b96;
+	--color-foreground-primary: #fff;
+	--color-foreground-secondary: #607b9666;
 	--color-primary-1: #1e2d3d;
 	--color-primary-2: #1c2b3a;
 	--color-primary-2-lighter: #263b50;
-	--color-secondary-1: #607b96;
-	--color-secondary-1-lighter: #607b9666;
 	--color-secondary-2: #3c9d93;
 	--color-secondary-3: #4d5bce;
-	--color-secondary-4: #fff;
 	--color-accent-1: #fea55f;
 	--color-accent-1-lighter: #ffac6b;
 	--color-accent-2: #43d9ad;
@@ -53,7 +53,7 @@
 html {
 	padding: var(--padding-outside);
 	font-size: var(--font-size-body);
-	color: var(--color-secondary-1);
+	color: var(--color-foreground);
 	background-color: var(--color-background-secondary);
 
 	body {
