--- a/src/routes/about-me/activitybar.module.css
+++ b/src/routes/about-me/activitybar.module.css
@@ -10,10 +10,10 @@
 
 			button {
 				line-height: 1;
-				color: var(--color-secondary-1-lighter);
+				color: var(--color-foreground-secondary);
 
 				&:is([disabled], :focus-visible, :hover) {
-					color: var(--color-secondary-1);
+					color: var(--color-foreground);
 				}
 			}
 
