--- a/src/routes/about-me/sidebar.module.css
+++ b/src/routes/about-me/sidebar.module.css
@@ -16,11 +16,11 @@
 				border-radius: var(--border-radius-sm);
 
 				&:not(:is([disabled], :focus-visible, :hover)) {
-					color: var(--color-secondary-1);
+					color: var(--color-foreground);
 				}
 
 				&:is([disabled], :focus-visible, :hover) {
-					color: var(--color-secondary-4);
+					color: var(--color-foreground-primary);
 				}
 
 				&:not([disabled]):is(:focus-visible, :hover) {
