--- a/src/styles/theme/gruvbox.css
+++ b/src/styles/theme/gruvbox.css
@@ -1,41 +1,41 @@
 :root {
-	--color-background: #fbf1c7;
-	--color-background-primary: #ebdbb2;
-	--color-background-secondary: #f9f5d7;
-	--color-foreground: #3c3836;
-	--color-foreground-primary: #282828;
-	--color-foreground-secondary: #504945;
-	--color-gray: #928374;
-	--color-gray-accent: #7c6f64;
-	--color-red: #9d0006;
-	--color-red-accent: #cc241d;
-	--color-green: #79740e;
-	--color-green-accent: #98971a;
-	--color-yellow: #b57614;
-	--color-yellow-accent: #d79921;
-	--color-blue: #076678;
-	--color-blue-accent: #458588;
-	--color-purple: #8f3f71;
-	--color-purple-accent: #616286;
-	--color-aqua: #427b58;
-	--color-aqua-accent: #689d6a;
-	--color-orange: #af3a03;
-	--color-orange-accent: #d65d0e;
+	--palette-background: #fbf1c7;
+	--palette-background-primary: #ebdbb2;
+	--palette-background-secondary: #f9f5d7;
+	--palette-foreground: #3c3836;
+	--palette-foreground-primary: #282828;
+	--palette-foreground-secondary: #504945;
+	--palette-gray: #928374;
+	--palette-gray-accent: #7c6f64;
+	--palette-red: #9d0006;
+	--palette-red-accent: #cc241d;
+	--palette-green: #79740e;
+	--palette-green-accent: #98971a;
+	--palette-yellow: #b57614;
+	--palette-yellow-accent: #d79921;
+	--palette-blue: #076678;
+	--palette-blue-accent: #458588;
+	--palette-purple: #8f3f71;
+	--palette-purple-accent: #616286;
+	--palette-aqua: #427b58;
+	--palette-aqua-accent: #689d6a;
+	--palette-orange: #af3a03;
+	--palette-orange-accent: #d65d0e;
 
 	@media (prefers-color-scheme: dark) {
-		--color-background: #282828;
-		--color-background-primary: #1d2021;
-		--color-background-secondary: #3c3836;
-		--color-foreground: #ebdbb2;
-		--color-foreground-primary: #fbf1c7;
-		--color-foreground-secondary: #d5c4a1;
-		--color-gray-accent: #a89984;
-		--color-red: #fb4934;
-		--color-green: #b8bb26;
-		--color-yellow: #fabd2f;
-		--color-blue: #83a598;
-		--color-purple: #d3869b;
-		--color-aqua: #8ec07c;
-		--color-orange: #fe8019;
+		--palette-background: #282828;
+		--palette-background-primary: #1d2021;
+		--palette-background-secondary: #3c3836;
+		--palette-foreground: #ebdbb2;
+		--palette-foreground-primary: #fbf1c7;
+		--palette-foreground-secondary: #d5c4a1;
+		--palette-gray-accent: #a89984;
+		--palette-red: #fb4934;
+		--palette-green: #b8bb26;
+		--palette-yellow: #fabd2f;
+		--palette-blue: #83a598;
+		--palette-purple: #d3869b;
+		--palette-aqua: #8ec07c;
+		--palette-orange: #fe8019;
 	}
 }
